--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,4 +17,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install -g @reshiftsecurity/reshift-plugin-npm
-    - run: reshift-scan -t ${{ secrets.RESHIFT_TOKEN }}
+    - run: reshift-scan -t ${{ secrets.RESHIFT_SECRET }}
